// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  id={undefined}
  name="materials"
  render={[Function]}
/>
`;

exports[`renders correctly with id 1`] = `
<div
  id="123"
  name="materials"
  render={[Function]}
/>
`;
